boulder/boulder/tests/compile_fail/type/struct_name.bo
# Another type with the name `A`
# (6:

struct A;

struct A {
    a: u32
}